--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>title</title>
-    <link type="text/css" rel='stylesheet' href="/bootstrap/bootstrap-5.2.1-dist/css/bootstrap.css">
+    <title>Ресторан</title>
+    <!-- <link type="text/css" rel='stylesheet' href="/bootstrap/bootstrap-5.2.1-dist/css/bootstrap.css">
     <script src="/bootstrap/bootstrap-5.2.1-dist/js/bootstrap.js"></script>
-    <link type="text/css" rel='stylesheet' href="/bootstrap/main.css">
+    <link type="text/css" rel='stylesheet' href="/bootstrap/main.css"> -->
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Herr+Von+Muellerhoff&family=Montserrat:wght@200;700&display=swap" rel="stylesheet">
+
+
+    <!--Icons -->
+    <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.0/dist/iconify-icon.min.js"></script>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/style.css">
+
 </head>
 <body>
 <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
 </noscript>
-<div id="app"></div>
+<div id="app">
+
+</div>
 <!-- built files will be auto injected -->
 </body>
 </html>
