--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,10 @@
     <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.0/dist/iconify-icon.min.js"></script>
 
+    <!--JS-menu-->
+    <script src="./js/jquery.min.js"></script>
+    <script src="./js/script-menu.js"></script>
+
     <!-- CSS -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
