--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,12 @@
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.0/dist/iconify-icon.min.js"></script>
 
     <!--JS-menu-->
-    <script src="./js/jquery.min.js"></script>
-    <script src="./js/script-menu.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/script-menu.js"></script>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
 
 </head>
 <body>
